socket-app/k8s/socket-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socket-app-deployment
  namespace: socket-system
  labels:
    app: socket-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: socket-app
  template:
    metadata:
      labels:
        app: socket-app
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: socket-app-container
          image: ayqutfe/socket-ping-pong:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8765
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: socket-app-service
  namespace: socket-system
  labels:
    app: socket-app
spec:
  selector:
    app: socket-app
  ports:
    - name: tcp-socket
      port: 8765
      targetPort: 8765
      protocol: TCP
  type: ClusterIP
